# Search

./: CMakeLists.txt  README.md  Skillbox_Search_Engine.cpp  Skillbox_Search_Engine.h
JSON files/: answers.json
JSON files/resources/: file005.txt
Src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp
Tests/: CMakeLists.txt  Tests.cpp
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
